<resources>
    <string name="app_name">Crop Air</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forget password ?</string>
    <string name="dont_have_a_account">Dont have a Account ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="image_header">Image Header</string>
    <string name="airplaneimage">airplaneImage</string>
    <string name="crop_air">Crop Air</string>
    <string name="flying">Flying</string>
    <string name="to">to ?</string>
    <string name="where_are_you">Where are you</string>
    <string name="searchbarlocationicon">searchBarLocationIcon</string>
    <string name="enter_your_destination">Enter your Destination</string>
    <string name="right_arrow_icon">Right Arrow Icon</string>
    <string name="all">All</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="_24_oct_2022">24 Oct 2022</string>
    <string name="_24_july_9_40_am">24 July 9:40 AM</string>
    <string name="las">LAS</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="_11_10_am">11:10 AM</string>
    <string name="san">SAN</string>
    <string name="san_franisco">San Franisco</string>
    <string name="sfo">SFO</string>
    <string name="airplane_image">airplane Image</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="paris">Paris</string>
    <string name="new_york">New York</string>
    <string name="dubai">Dubai</string>
    <string name="singapore">Singapore</string>
    <string name="admin">Admin</string>
    <string name="admin_admin_com">admin@admin.com</string>
    <string name="profile_pic_background_image">Profile Pic Background Image</string>
    <string name="notifcation_image">Notifcation Image</string>
    <string name="payment_image">Payment image</string>
    <string name="settings_image">Settings Image</string>
    <string name="profile_pic_image">Profile Pic Image</string>
</resources>