<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logIn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_marginTop="50dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:layout_below="@+id/logIn"
            android:hint="@string/user_name"
            android:textColorHint="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="20dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_outline_account_circle_24"
            android:layout_marginTop="50dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true" android:background="#3fffffff"
            android:inputType="text"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@+id/userName"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="20dp"
            android:background="#3fff"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_outline_create_24"

            android:layout_marginTop="50dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" android:inputType="textPassword"
            android:singleLine="true"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_below="@+id/password"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="50dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:backgroundTint="@color/design_default_color_secondary"


    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgetPassword"
            android:text="@string/forget_password"
            android:layout_below="@+id/submitButton"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="10dp" android:layout_marginStart="100dp" android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newAccount"
            android:text="@string/dont_have_a_account"
            android:layout_below="@+id/forgetPassword"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="20sp"
            android:gravity="center"


            android:layout_centerHorizontal="true"

    />


</RelativeLayout>